apps/kube-prometheus-stack/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    gateway-access: private
