apps/kube-prometheus-stack/kustomization/adguard-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/name: adguard-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-exporter
    spec:
      containers:
        - name: adguard-exporter
          image: reg.yiannis.io/proxy-ghcr/henrywhitaker3/adguard-exporter:v1.2.1@sha256:42a9581bae4a91e6d4985415d1fe89ab9b1f50fbe2945a1c122d212d6354b747
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9618
          readinessProbe:
            httpGet:
              path: /readyz
              port: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: metrics
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/name: adguard-exporter
spec:
  selector:
    app.kubernetes.io/name: adguard-exporter
  ports:
    - name: metrics
      port: 9618
      targetPort: metrics
