apps/kube-prometheus-stack/kustomization/httproute-grafana-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-private
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Grafana
    gethomepage.dev/href: "https://gfn.yiannis.io"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/name: grafana
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
  - name: private
    namespace: traefik
    sectionName: websecure-gfn
  hostnames:
  - gfn.yiannis.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
